--- a/ex_3/templates/t2.html
+++ b/ex_3/templates/t2.html
@@ -54,7 +54,6 @@
 {% block scriptblock %}
 <script>
     document.addEventListener("DOMContentLoaded", () => {
-        console.log("✅ donut t2 script loaded");
 
         const aliasEl = document.getElementById("alias");
         const colorEl = document.getElementById("color");
@@ -77,7 +76,7 @@
             const img = btn.querySelector("img");
             if (img) preview.src = img.src;
             chosenName.textContent = selectedDonut;
-            console.log("🍩 Selected:", selectedDonut);
+            console.log("Selected:", selectedDonut);
         });
 
         // send to Flask
